# RAL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
RAL/: CMakeLists.txt  RAL.cpp  RAL.h
RAL/core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Main.cpp  Main.h
RAL/core/FCM/: CMakeLists.txt  FCM.cpp  FCM.h
RAL/core/baseClass/: BaseComponent.cpp  BaseComponent.h  BaseFactory.cpp  BaseFactory.h  BaseGame.cpp  BaseGame.h  CMakeLists.txt
RAL/core/events/: CMakeLists.txt  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventManager.cpp  EventManager.h  EventManagerFactory.cpp  EventManagerFactory.h  KeyEvents.h  MouseEvents.cpp  MouseEvents.h  WindowEvents.h
RAL/core/events/eventTypes/: KeyEvents.cpp  KeyEvents.h  MouseEvents.cpp  MouseEvents.h  WindowEvents.cpp  WindowEvents.h
RAL/core/fileManager/: CMakeLists.txt  FileManager.cpp  FileManager.h  FileManagerFactory.cpp  FileManagerFactory.h
RAL/core/layers/: CMakeLists.txt  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  LayerManagerFactory.cpp  LayerManagerFactory.h
RAL/core/memoryManager/: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  Overload.cpp  Overload.h
RAL/core/utility/: Asserts.h  CMakeLists.txt  LogMsg.cpp  LogMsg.h  Logger.cpp  Logger.h  Types.cpp  Types.h
RAL/include/RAL/: RAL.h
RAL/platfomLayer/: CMakeLists.txt  PlatformLayer.cpp  PlatformLayer.h
RAL/platfomLayer/consoleInterpreter/: CMakeLists.txt  ConsoleInterpreter.cpp  ConsoleInterpreter.h
RAL/platfomLayer/file/: CMakeLists.txt  File.cpp  File.h  FileBin.cpp  FileBin.h  FileFactory.cpp  FileFactory.h  FileTxt.cpp  FileTxt.h
RAL/platfomLayer/memory/: CMakeLists.txt  Memory.cpp  Memory.h  MemoryFactory.cpp  MemoryFactory.h
RAL/platfomLayer/window/: CMakeLists.txt  Window.cpp  Window.h  WindowFactory.cpp  WindowFactory.h  WindowSpec.cpp  WindowSpec.h
RAL/platfomLayer/windows/: CMakeLists.txt  Win32.cpp  Win32.h  Win32GLFW.cpp  Win32GLFW.h  Win32Main.cpp  Win32Main.h  Win32Time.cpp  Win32Time.h  Win32Timer.cpp  Win32Timer.h  WinMain.cpp  WinMain.h
RAL/platfomLayer/windows/consoleInterpreter/: Win32ConsoleInterpreter.cpp  Win32ConsoleInterpreter.h
RAL/platfomLayer/windows/file/: Win32File.cpp  Win32File.h  Win32FileBin.cpp  Win32FileBin.h  Win32FileTxt.cpp  Win32FileTxt.h
RAL/platfomLayer/windows/memory/: Win32Memory.cpp  Win32Memory.h
RAL/platfomLayer/windows/window/: Win32Types.cpp  Win32Types.h  Win32Window.cpp  Win32Window.h
RAL/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
RAL/renderer/entity/: CMakeLists.txt  Camera3D.cpp  Camera3D.h  Entity.cpp  Entity.h  Entity3D.cpp  Entity3D.h  Object3D.cpp  Object3D.h
RAL/renderer/material/: CMakeLists.txt  Material.cpp  Material.h
RAL/renderer/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h
RAL/renderer/physics/: CMakeLists.txt  Physics.cpp  Physics.h
RAL/renderer/renderer/: CMakeLists.txt  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
RAL/renderer/renderer2d/: CMakeLists.txt  Renderer2D.cpp  Renderer2D.h
RAL/renderer/renderer3d/: CMakeLists.txt  Renderer3D.cpp  Renderer3D.h
RAL/renderer/renderingAPI/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  ProgramData.cpp  ProgramData.h  RenderingAPI.cpp  RenderingAPI.h  RenderingContext.cpp  RenderingContext.h  TextureParam.cpp  TextureParam.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
RAL/renderer/renderingAPI/buffers/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
RAL/renderer/renderingAPI/platform/directX/: DirectX.cpp  DirectX.h
RAL/renderer/renderingAPI/platform/openGL/: GLIndexBuffer.cpp  GLIndexBuffer.h  GLIndexable.cpp  GLIndexable.h  GLProgram.cpp  GLProgram.h  GLRenderingAPI.cpp  GLRenderingAPI.h  GLTextureManager.cpp  GLTextureManager.h  GLTypes.cpp  GLTypes.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  OpenGL.cpp  OpenGL.h
RAL/renderer/scene/: CMakeLists.txt  Scene.cpp  Scene.h  Scene3D.cpp  Scene3D.h
RAL/renderer/texture/: CMakeLists.txt  Texture.cpp  Texture.h
RAL/src/: Engine.cpp  Engine.h  app.cpp  app.h  asserts.cpp  asserts.h  defines.h  logger.cpp  logger.h  main.cpp  pch.h  ral.cpp  ral.h  types.h  typos.h
RAL/src/containers/: CMakeLists.txt  optional.h  pair.h  string.cpp  string.h  vector.h
RAL/src/core/: CMakeLists.txt  allocator.cpp  allocator.h  application.cpp  application.h  asserts.cpp  asserts.h  baseComponent.cpp  baseComponent.h  baseFactory.h  baseGame.cpp  baseGame.h  defines.h  factoryManager.cpp  factoryManager.h  logger.cpp  logger.h  main.cpp  types.h
RAL/src/events/: Event.cpp  Event.h  event.h  keyEvent.h  mouseEvent.h
RAL/src/platformLayer/Windows/: Wconsole.cpp
RAL/src/platformLayer/console/: CMakeLists.txt  Wconsole.cpp  Wconsole.h  console.cpp  console.h  consoleInterpreter.cpp  consoleInterpreter.h  consoleInterpreterFactory.cpp  consoleInterpreterFactory.h  wConsole.cpp  wConsole.h~HEAD  wConsole.h~clion-project  wConsoleInterpreter.cpp  wConsoleInterpreter.h
RAL/src/platformLayer/fileIO/: fileIO.cpp  fileIO.h  fileIOFactory.cpp  fileIOFactory.h  wFileIO.cpp  wFileIO.h
RAL/src/platformLayer/memory/: memory.cpp  memory.h  memoryFactory.cpp  memoryFactory.h  wMemory.cpp  wMemory.h
RAL/src/platformLayer/window/: CMakeLists.txt  WindowsWindow.cpp  WindowsWindow.h  window.cpp  window.h  windowFactory.cpp  windowFactory.h
RAL/src/tests/: CMakeLists.txt  test.cpp  test.h
demo/: CMakeLists.txt
demo/src/: demo.cpp  main.cpp
include/RAL/: Event.h  Games.h  Keycodes.h  Layers.h  MemoryOverload.h
src/: main.cpp
testbed/: CMakeLists.txt  testbed.cpp
