#######################################################
# Copyright (C) 2023                                  #
# Ondřej Nedojedlý (https://www.github.com/ondranedo),#
# Matyáš Noska (https://www.github.com/sutiama),      #
# Vojtěch Šokala (https://github.com/Karnatour),      #
# Adam Wiszczor (https://github.com/1nome).           #
#                                                     #
# This file is part of `RAL_PROJECT` project          #
# which is released under `GNU General Public         #
# License v3.0` license.                              #
# See file `LICENSE` for full license details.        #
#######################################################
# baseClasses (interfaces) for many parts of the engine
add_library(ral_core_base_class
        BaseComponent.cpp
        BaseComponent.h
        BaseFactory.cpp
        BaseFactory.h
        BaseGame.cpp
        BaseGame.h)