#######################################################
# Copyright (C) 2023                                  #
# Ondřej Nedojedlý (https://www.github.com/ondranedo),#
# Matyáš Noska (https://www.github.com/sutiama),      #
# Vojtěch Šokala (https://github.com/Karnatour),      #
# Adam Wiszczor (https://github.com/1nome).           #
#                                                     #
# This file is part of `RAL_PROJECT` project          #
# which is released under `GNU General Public         #
# License v3.0` license.                              #
# See file `LICENSE` for full license details.        #
#######################################################

add_library(ral_core_events STATIC
    Event.cpp
    Event.h
    MouseEvents.cpp
    MouseEvents.h
    KeyEvents.cpp
    KeyEvents.h
    WindowEvents.cpp
    WindowEvents.h)